# Ros_competitve

./: .gitignore  comand.txt  run.sh
autorace_2023/: CMakeLists.txt  package.xml
autorace_camera/: setup.cfg
autorace_camera/calibration/extrinsic_calibration/: projection.yaml
autorace_core_TheRosBoss/: package.xml  setup.cfg  setup.py
autorace_core_TheRosBoss/autorace_core_TheRosBoss/: detect_signs.py  follow_node.py
autorace_core_TheRosBoss/launch/: autorace_core.launch  autorace_core.launch.py
autorace_core_TheRosBoss/module/: config.py  logger.py  parking_space.py  pedestrian_crossing.py  traffic_construction.py  traffic_intersection.py  traffic_lights.py  tunnel_space.py
follow_path_code/: package.xml  setup.cfg  setup.py
follow_path_code/follow_path_code/: detect_signs.py  follow_node.py
follow_path_code/launch/: autorace_core.launch  autorace_core.launch.py
follow_path_code/module/: config.py  parking_space.py  traffic_lights.py
